--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@ body{
 h1{
     font-size:50px ;
 }
+h2{
+    font-size: 40px;
+}
+p{
+    color: dimgray;
+}
 .highlight{
     color: orange;
 }
@@ -14,5 +20,19 @@ h1{
     padding-left: 2%;
 }
 .frist-half img{
-    width: 100%;
+    width: 70%;
+    padding-bottom: 100px;
+  
+}
+.button{
+    text-decoration: none;
+    background-image: linear-gradient(45deg,lightsalmon,tomato);
+    padding: 10px 20px;
+    border-radius: 10px;
+    color: whitesmoke;
+    width: 700;
+   
+}
+.new{
+    margin-top:50px;
 }
